// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";


package pusGroundModel.protobuf;

message PusElement {
extensions 3 to 103;

  optional ccsds_mal.protobuf.UINTEGER lastUpdateMode = 1;
  optional ccsds_mal.protobuf.TIME lastUpdateTime = 2;
}
